# miniraytracer

./: CMakeLists.txt
src/: CMakeLists.txt  Image.cpp  Image.h  Scene.cpp  Scene.h  Vector.hpp  main.cpp  raytrace.cpp  raytrace.h  raytracer.sln  raytracer.vcxproj  raytracer.vcxproj.filters
src/imagewrite/: CMakeLists.txt  imagewrite.cpp  imagewrite.h
src/utils/: CMakeLists.txt  utils.cpp  utils.h
